--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="logo">
                 <img src="..\img\hello\logo.png" alt="logo" class=logo_img>
                 <div class=logo_text>
-                    WordPress интенсив
+                    Forca Barca!
                 </div>  
             </div>
             <h1 class="title"> Создать свой сайт на WordPress</h1>
